tests/neg/i11963a.scala
//> using options -Xfatal-warnings

open trait Foo // error
